@@ -16,3 +16,4 @@ function Perk(id, name) {
 Perks.Virility  = new Perk("vir0", "Virility");
 Perks.Fertility = new Perk("fer0", "Fertility");
 Perks.Breeder   = new Perk("bre0", "Breeder");
+Perks.Fleetfoot = new Perk("flee0", "Fleetfoot");
